
syntax = "proto3";

option java_multiple_files = true;
option java_package = "kaist.iclab.abclogger";
option java_outer_classname = "TestProto";

package protos;

service Test {
  rpc testReply (TestRequest) returns (TestResponse) {}
}

message TestRequest {
  string content = 1;
}

message TestResponse {
  string content = 1;
}